--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server/src/index.js",
   "scripts": {
-    "client": "cd client && npm install && npm run start",
-    "server": "cd server && npm install && npm run dev",
+    "client": "cd client &&  npm run start",
+    "server": "cd server &&  npm run dev",
     "start": "cd server && npm install && npm run start",
     "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
